# CAD-Zeichner

./: CAD-Zeichenprogramm.py  Cargo.toml  README.md  build.rs
src/: geometry.rs  main.rs  ui.rs  updater.rs
src/geometry/: construction.rs  mod.rs  types.rs  utils.rs  validation.rs
