[package]
name = "CAD-Zeichner_windows"
version = "6.0.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28", default-features = true, features = ["default_fonts"] }
egui = "0.28"
image = "0.25"
screenshots = "0.8"
self_update = "0.41"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json", "blocking"] }
self-replace = "1.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "wingdi"] }

[profile.release]
opt-level = 3
lto = true

[build-dependencies]
winres = "0.1"